<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    android:screenOrientation="portrait"
    >


  <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
      android:id="@+id/start_game"
      android:layout_width="@dimen/start_btn_size"
      android:layout_height="@dimen/start_btn_size"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:background="@android:color/white"
      app:layout_constraintBottom_toTopOf="@+id/let_go"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ready_label"
      app:layout_constraintVertical_bias="0.408" />

  <TextView
      android:id="@+id/ready_label"
      android:layout_width="@dimen/start_btn_size"
      android:layout_height="@dimen/text_height"
      android:layout_marginStart="8dp"
      android:layout_marginTop="48dp"
      android:layout_marginEnd="8dp"
      android:text="@string/ready"
      android:textAlignment="center"
      android:textColor="@android:color/holo_orange_dark"
      android:textSize="@dimen/textSize"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/let_go"
      android:layout_width="@dimen/start_btn_size"
      android:layout_height="@dimen/text_height"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="44dp"
      android:text="@string/let_go"
      android:textAlignment="center"
      android:textColor="@android:color/holo_orange_dark"
      android:textSize="@dimen/textSize"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/help"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />


  <Button
      android:id="@+id/help"
      android:layout_width="90dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="24dp"
      android:text="@string/help"
      android:textSize="16dp"
      android:textStyle="bold"
      android:onClick="gethelp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:background="@android:color/holo_green_light"/>
</android.support.constraint.ConstraintLayout>